2008-10-01  Sanel <karijes@users.sourceforge.net>

	* src/ExpanadableGroup.cpp: do not reorder childs if group is not shown
	* src/IconTheme.cpp:
	* src/XSettingsClient.cpp: s/EASSERT/E_ASSERT, s/EDEBUG/E_DEBUG,
	s/EWARNING/E_WARNING
	* src/Window.cpp: small code reordering
	* TODO: entry
	* edelib/Util.h:
	* src/Util.cpp: build_filename() and build_dirname() should not contain
	separator parameter
	* test/util.cpp: updated tests

2008-09-26  Sanel <karijes@users.sourceforge.net>

	* Jamfile: SubInclude should come the last

2008-09-24  Sanel <karijes@users.sourceforge.net>

	* m4/dbus.m4: if disabled, don't leave spaces, jam doesn't like it
	* configure.in: the same applies for FLTK; also fixed issue with CFLAGS
	and CXXFLAGS where AC_PROG_CC and AC_PROG_CXX would secretly add 
	'-O2' and '-g' flags
	* m4/fltk.m4: added --with-fltk-path configure option to specify
	alternative FLTK installation
	* src/Resource.cpp: use temporary when substring is used or we will get a
	junk as name

2008-09-23  Sanel <karijes@users.sourceforge.net>

	* src/String.cpp: chcpy() made static
	* src/String.cpp, src/Run.cpp, src/Sipc.cpp, src/Resource.cpp: fix warnings from Sun's
	compiler

2008-09-22  Sanel <karijes@users.sourceforge.net>

	* src/Jamfile, examples/Jamfile: let files depending on FLTK 
	uses FLTK_CFLAGS
	* Jamrules: STDLIB variable will contain '-l' flag in case it is placed in
	non-standard path so search directories can be added (e.g. in case of
	different compiler)

2008-09-21  Sanel <karijes@users.sourceforge.net>

	* edelib/Sipc.h: updated documentation
	* test/mime.cpp: test for text/html mime now points to
	test/perf/asciidoc.html instead to removed doc/footer.html
	* TODO: added/removed entry
	* Jamrules: let 'jam distclean' remove Doxyfile too
	* doc/Doxyfile.in: now documentation should show correct include path

2008-09-20  Sanel <karijes@users.sourceforge.net>

	* edelib/TableBase.h: updated documentation